--- a/Final_LQ_Eom.ipynb
+++ b/Final_LQ_Eom.ipynb
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "6fa31664-c525-4720-8671-c317ce4c7f3f",
    "metadata": {},
    "outputs": [],
@@ -1209,21 +1209,24 @@
     "    total_sales_per_quarter['청년층_매출_비율'].sum() / total_sales_per_quarter['전체_청년층_매출'].sum()\n",
     ")\n",
     "\n",
-    "df_gentrification['개폐업_수'] = df_gentrification['open_store_count'] - df_gentrification['closed_store_count']\n",
+    "# 개업률과 폐업률 변수 활용하여 개폐업 비율 계산 및 LQ 지수 생성\n",
     "\n",
-    "# 개폐업 수 LQ 지수 계산\n",
-    "open_close_rate = df_gentrification.groupby(['dong', 'quarter'])['개폐업_수'].sum().reset_index(name='개폐업_수_합계')\n",
-    "open_close_total = df_gentrification.groupby('quarter')['개폐업_수'].sum().reset_index(name='전체_개폐업_수')\n",
+    "# 개폐업 비율 계산 (개업률 - 폐업률)\n",
+    "df_gentrification['개폐업_비율'] = df_gentrification['opening_rate'] - df_gentrification['closure_rate']\n",
+    "\n",
+    "# 개폐업 비율 LQ 지수 계산\n",
+    "open_close_rate = df_gentrification.groupby(['dong', 'quarter'])['개폐업_비율'].sum().reset_index(name='개폐업_비율_합계')\n",
+    "open_close_total = df_gentrification.groupby('quarter')['개폐업_비율'].sum().reset_index(name='전체_개폐업_비율')\n",
     "\n",
     "# 데이터 병합\n",
     "open_close_rate = pd.merge(open_close_rate, open_close_total, on='quarter', how='left')\n",
     "\n",
-    "# 개폐업 수 LQ 지수 계산\n",
-    "open_close_rate['open_close_lq'] = (open_close_rate['개폐업_수_합계'] / open_close_rate['전체_개폐업_수']) / (\n",
-    "    open_close_rate['개폐업_수_합계'].sum() / open_close_rate['전체_개폐업_수']\n",
+    "# 개폐업 비율 LQ 지수 계산\n",
+    "open_close_rate['open_close_lq'] = (open_close_rate['개폐업_비율_합계'] / open_close_rate['전체_개폐업_비율']) / (\n",
+    "    open_close_rate['개폐업_비율_합계'].sum() / open_close_rate['전체_개폐업_비율'].sum()\n",
     ")\n",
     "\n",
-    "# 필요한 열을 모아서 최종 데이터프레임 생성 (음식업, 소매업, 프랜차이즈, 청년층 매출액, 개폐업 LQ 포함)\n",
+    "# 필요한 열을 모아서 최종 데이터프레임 생성 (음식업, 소매업, 프랜차이즈, 청년층 매출액, 개폐업 비율 LQ 포함)\n",
     "final_df = food_service_rate[['dong', 'quarter', 'food_service_lq']].merge(\n",
     "    retail_service_rate[['dong', 'quarter', 'retail_service_lq']],\n",
     "    on=['dong', 'quarter'], how='outer'\n",
@@ -1241,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "44a8371e-3cd0-420e-ae35-8a6ff08f57dc",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1287,7 @@
        "      <td>0.155832</td>\n",
        "      <td>0.052994</td>\n",
        "      <td>0.000072</td>\n",
-       "      <td>-0.000286</td>\n",
+       "      <td>2.299827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1304,7 +1307,7 @@
        "      <td>0.156631</td>\n",
        "      <td>0.053661</td>\n",
        "      <td>0.000169</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.173819</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1314,7 +1317,7 @@
        "      <td>0.156893</td>\n",
        "      <td>0.063088</td>\n",
        "      <td>0.000770</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>-5.593789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1324,7 +1327,7 @@
        "      <td>0.142965</td>\n",
        "      <td>0.062151</td>\n",
        "      <td>0.000932</td>\n",
-       "      <td>-0.000057</td>\n",
+       "      <td>0.011181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1344,7 +1347,7 @@
        "      <td>0.868306</td>\n",
        "      <td>0.715063</td>\n",
        "      <td>0.571270</td>\n",
-       "      <td>-0.001542</td>\n",
+       "      <td>19.123600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5876</th>\n",
@@ -1354,7 +1357,7 @@
        "      <td>0.852448</td>\n",
        "      <td>0.685436</td>\n",
        "      <td>0.584662</td>\n",
-       "      <td>-0.000800</td>\n",
+       "      <td>3.073008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5877</th>\n",
@@ -1364,7 +1367,7 @@
        "      <td>0.862502</td>\n",
        "      <td>0.690223</td>\n",
        "      <td>0.533317</td>\n",
-       "      <td>0.000057</td>\n",
+       "      <td>-4.479691</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5878</th>\n",
@@ -1374,7 +1377,7 @@
        "      <td>0.865938</td>\n",
        "      <td>0.687714</td>\n",
        "      <td>0.542402</td>\n",
-       "      <td>-0.001085</td>\n",
+       "      <td>2.254685</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5879</th>\n",
@@ -1384,7 +1387,7 @@
        "      <td>0.858752</td>\n",
        "      <td>0.682793</td>\n",
        "      <td>0.479870</td>\n",
-       "      <td>-0.000514</td>\n",
+       "      <td>4.449481</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1406,22 +1409,22 @@
        "5879  중랑구 중화2동    20242         1.083672           0.858752      0.682793   \n",
        "\n",
        "      youth_sales_lq  open_close_lq  \n",
-       "0           0.000072      -0.000286  \n",
+       "0           0.000072       2.299827  \n",
        "1           0.000581       0.000000  \n",
-       "2           0.000169       0.000000  \n",
-       "3           0.000770       0.000000  \n",
-       "4           0.000932      -0.000057  \n",
+       "2           0.000169       0.173819  \n",
+       "3           0.000770      -5.593789  \n",
+       "4           0.000932       0.011181  \n",
        "...              ...            ...  \n",
-       "5875        0.571270      -0.001542  \n",
-       "5876        0.584662      -0.000800  \n",
-       "5877        0.533317       0.000057  \n",
-       "5878        0.542402      -0.001085  \n",
-       "5879        0.479870      -0.000514  \n",
+       "5875        0.571270      19.123600  \n",
+       "5876        0.584662       3.073008  \n",
+       "5877        0.533317      -4.479691  \n",
+       "5878        0.542402       2.254685  \n",
+       "5879        0.479870       4.449481  \n",
        "\n",
        "[5880 rows x 7 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "c815adac-9306-40dd-ac0c-021f3b3cd529",
    "metadata": {},
    "outputs": [
@@ -1459,8 +1462,8 @@
        "      <th></th>\n",
        "      <th>dong</th>\n",
        "      <th>quarter</th>\n",
-       "      <th>개폐업_수_합계</th>\n",
-       "      <th>전체_개폐업_수</th>\n",
+       "      <th>개폐업_비율_합계</th>\n",
+       "      <th>전체_개폐업_비율</th>\n",
        "      <th>open_close_lq</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1469,41 +1472,41 @@
        "      <th>0</th>\n",
        "      <td>강남구 개포1동</td>\n",
        "      <td>20221</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>-3114.0</td>\n",
-       "      <td>-0.000286</td>\n",
+       "      <td>-84.0</td>\n",
+       "      <td>-13276.0</td>\n",
+       "      <td>2.299827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>강남구 개포1동</td>\n",
        "      <td>20222</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>829.0</td>\n",
+       "      <td>12842.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>강남구 개포1동</td>\n",
        "      <td>20223</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-5919.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>-13.0</td>\n",
+       "      <td>-27185.0</td>\n",
+       "      <td>0.173819</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>강남구 개포1동</td>\n",
        "      <td>20224</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-2719.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>-9552.0</td>\n",
+       "      <td>-5.593789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>강남구 개포1동</td>\n",
        "      <td>20231</td>\n",
        "      <td>-1.0</td>\n",
-       "      <td>-6546.0</td>\n",
-       "      <td>-0.000057</td>\n",
+       "      <td>-32510.0</td>\n",
+       "      <td>0.011181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1517,41 +1520,41 @@
        "      <th>5875</th>\n",
        "      <td>중랑구 중화2동</td>\n",
        "      <td>20232</td>\n",
-       "      <td>-27.0</td>\n",
-       "      <td>-1750.0</td>\n",
-       "      <td>-0.001542</td>\n",
+       "      <td>-429.0</td>\n",
+       "      <td>-8154.0</td>\n",
+       "      <td>19.123600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5876</th>\n",
        "      <td>중랑구 중화2동</td>\n",
        "      <td>20233</td>\n",
-       "      <td>-14.0</td>\n",
-       "      <td>-3622.0</td>\n",
-       "      <td>-0.000800</td>\n",
+       "      <td>-163.0</td>\n",
+       "      <td>-19280.0</td>\n",
+       "      <td>3.073008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5877</th>\n",
        "      <td>중랑구 중화2동</td>\n",
        "      <td>20234</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-964.0</td>\n",
-       "      <td>0.000057</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>-8114.0</td>\n",
+       "      <td>-4.479691</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5878</th>\n",
        "      <td>중랑구 중화2동</td>\n",
        "      <td>20241</td>\n",
-       "      <td>-19.0</td>\n",
-       "      <td>-4689.0</td>\n",
-       "      <td>-0.001085</td>\n",
+       "      <td>-184.0</td>\n",
+       "      <td>-29663.0</td>\n",
+       "      <td>2.254685</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5879</th>\n",
        "      <td>중랑구 중화2동</td>\n",
        "      <td>20242</td>\n",
-       "      <td>-9.0</td>\n",
-       "      <td>-1167.0</td>\n",
-       "      <td>-0.000514</td>\n",
+       "      <td>-110.0</td>\n",
+       "      <td>-8986.0</td>\n",
+       "      <td>4.449481</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1559,23 +1562,23 @@
        "</div>"
       ],
       "text/plain": [
-       "          dong  quarter  개폐업_수_합계  전체_개폐업_수  open_close_lq\n",
-       "0     강남구 개포1동    20221      -5.0   -3114.0      -0.000286\n",
-       "1     강남구 개포1동    20222       0.0     829.0       0.000000\n",
-       "2     강남구 개포1동    20223       0.0   -5919.0       0.000000\n",
-       "3     강남구 개포1동    20224       0.0   -2719.0       0.000000\n",
-       "4     강남구 개포1동    20231      -1.0   -6546.0      -0.000057\n",
-       "...        ...      ...       ...       ...            ...\n",
-       "5875  중랑구 중화2동    20232     -27.0   -1750.0      -0.001542\n",
-       "5876  중랑구 중화2동    20233     -14.0   -3622.0      -0.000800\n",
-       "5877  중랑구 중화2동    20234       1.0    -964.0       0.000057\n",
-       "5878  중랑구 중화2동    20241     -19.0   -4689.0      -0.001085\n",
-       "5879  중랑구 중화2동    20242      -9.0   -1167.0      -0.000514\n",
+       "          dong  quarter  개폐업_비율_합계  전체_개폐업_비율  open_close_lq\n",
+       "0     강남구 개포1동    20221      -84.0   -13276.0       2.299827\n",
+       "1     강남구 개포1동    20222        0.0    12842.0       0.000000\n",
+       "2     강남구 개포1동    20223      -13.0   -27185.0       0.173819\n",
+       "3     강남구 개포1동    20224      147.0    -9552.0      -5.593789\n",
+       "4     강남구 개포1동    20231       -1.0   -32510.0       0.011181\n",
+       "...        ...      ...        ...        ...            ...\n",
+       "5875  중랑구 중화2동    20232     -429.0    -8154.0      19.123600\n",
+       "5876  중랑구 중화2동    20233     -163.0   -19280.0       3.073008\n",
+       "5877  중랑구 중화2동    20234      100.0    -8114.0      -4.479691\n",
+       "5878  중랑구 중화2동    20241     -184.0   -29663.0       2.254685\n",
+       "5879  중랑구 중화2동    20242     -110.0    -8986.0       4.449481\n",
        "\n",
        "[5880 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1586,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "8fd25d71-2c70-4e72-8838-87a26a230a0d",
    "metadata": {},
    "outputs": [
@@ -1612,103 +1615,103 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>quarter</th>\n",
-       "      <th>전체_개폐업_수</th>\n",
+       "      <th>전체_개폐업_비율</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>20211</td>\n",
-       "      <td>11360.0</td>\n",
+       "      <td>45405.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>20212</td>\n",
-       "      <td>9990.0</td>\n",
+       "      <td>37675.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>20213</td>\n",
-       "      <td>9255.0</td>\n",
+       "      <td>25099.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>20214</td>\n",
-       "      <td>16565.0</td>\n",
+       "      <td>49656.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>20221</td>\n",
-       "      <td>-3114.0</td>\n",
+       "      <td>-13276.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>20222</td>\n",
-       "      <td>829.0</td>\n",
+       "      <td>12842.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>20223</td>\n",
-       "      <td>-5919.0</td>\n",
+       "      <td>-27185.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>20224</td>\n",
-       "      <td>-2719.0</td>\n",
+       "      <td>-9552.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>20231</td>\n",
-       "      <td>-6546.0</td>\n",
+       "      <td>-32510.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>20232</td>\n",
-       "      <td>-1750.0</td>\n",
+       "      <td>-8154.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>20233</td>\n",
-       "      <td>-3622.0</td>\n",
+       "      <td>-19280.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>20234</td>\n",
-       "      <td>-964.0</td>\n",
+       "      <td>-8114.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>20241</td>\n",
-       "      <td>-4689.0</td>\n",
+       "      <td>-29663.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>20242</td>\n",
-       "      <td>-1167.0</td>\n",
+       "      <td>-8986.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    quarter  전체_개폐업_수\n",
-       "0     20211   11360.0\n",
-       "1     20212    9990.0\n",
-       "2     20213    9255.0\n",
-       "3     20214   16565.0\n",
-       "4     20221   -3114.0\n",
-       "5     20222     829.0\n",
-       "6     20223   -5919.0\n",
-       "7     20224   -2719.0\n",
-       "8     20231   -6546.0\n",
-       "9     20232   -1750.0\n",
-       "10    20233   -3622.0\n",
-       "11    20234    -964.0\n",
-       "12    20241   -4689.0\n",
-       "13    20242   -1167.0"
+       "    quarter  전체_개폐업_비율\n",
+       "0     20211    45405.0\n",
+       "1     20212    37675.0\n",
+       "2     20213    25099.0\n",
+       "3     20214    49656.0\n",
+       "4     20221   -13276.0\n",
+       "5     20222    12842.0\n",
+       "6     20223   -27185.0\n",
+       "7     20224    -9552.0\n",
+       "8     20231   -32510.0\n",
+       "9     20232    -8154.0\n",
+       "10    20233   -19280.0\n",
+       "11    20234    -8114.0\n",
+       "12    20241   -29663.0\n",
+       "13    20242    -8986.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
