--- a/Final_LQ_Eom.ipynb
+++ b/Final_LQ_Eom.ipynb
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "6fa31664-c525-4720-8671-c317ce4c7f3f",
    "metadata": {},
    "outputs": [],
@@ -1209,7 +1209,12 @@
     "    total_sales_per_quarter['청년층_매출_비율'].sum() / total_sales_per_quarter['전체_청년층_매출'].sum()\n",
     ")\n",
     "\n",
-    "df_gentrification['순증가율'] = df_gentrification['opening_rate'] - df_gentrification['closure_rate']\n",
+    "filtered_df = df_gentrification[df_gentrification['major'].isin(['음식업', '소매업'])]\n",
+    "\n",
+    "# major, dong, quarter 별 순 증가율 계산 (개업률 - 폐업률)\n",
+    "net_growth_rate = filtered_df.groupby(['dong', 'quarter', 'major']).apply(\n",
+    "    lambda x: (x['opening_rate'] - x['closure_rate']).mean()\n",
+    ").reset_index(name='순증가율')\n",
     "\n",
     "# 필요한 열을 모아서 최종 데이터프레임 생성 (음식업, 소매업, 프랜차이즈, 청년층 매출액, 순 증가율 포함)\n",
     "final_df = food_service_rate[['dong', 'quarter', 'food_service_lq']].merge(\n",
@@ -1222,14 +1227,14 @@
     "    total_sales_per_quarter[['dong', 'quarter', 'youth_sales_lq']],\n",
     "    on=['dong', 'quarter'], how='outer'\n",
     ").merge(\n",
-    "    df_gentrification[['dong', 'quarter', '순증가율']],\n",
+    "    net_growth_rate[['dong', 'quarter', 'major', '순증가율']],\n",
     "    on=['dong', 'quarter'], how='outer'\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "44a8371e-3cd0-420e-ae35-8a6ff08f57dc",
    "metadata": {},
    "outputs": [
@@ -1260,6 +1265,7 @@
        "      <th>retail_service_lq</th>\n",
        "      <th>franchise_lq</th>\n",
        "      <th>youth_sales_lq</th>\n",
+       "      <th>major</th>\n",
        "      <th>순증가율</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1272,7 +1278,8 @@
        "      <td>0.155832</td>\n",
        "      <td>0.052994</td>\n",
        "      <td>0.000072</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>소매업</td>\n",
+       "      <td>-3.846154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1282,37 +1289,41 @@
        "      <td>0.155832</td>\n",
        "      <td>0.052994</td>\n",
        "      <td>0.000072</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>음식업</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>강남구 개포1동</td>\n",
-       "      <td>20221</td>\n",
-       "      <td>0.036795</td>\n",
-       "      <td>0.155832</td>\n",
-       "      <td>0.052994</td>\n",
-       "      <td>0.000072</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>20222</td>\n",
+       "      <td>0.036278</td>\n",
+       "      <td>0.155754</td>\n",
+       "      <td>0.053008</td>\n",
+       "      <td>0.000581</td>\n",
+       "      <td>소매업</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>강남구 개포1동</td>\n",
-       "      <td>20221</td>\n",
-       "      <td>0.036795</td>\n",
-       "      <td>0.155832</td>\n",
-       "      <td>0.052994</td>\n",
-       "      <td>0.000072</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>20222</td>\n",
+       "      <td>0.036278</td>\n",
+       "      <td>0.155754</td>\n",
+       "      <td>0.053008</td>\n",
+       "      <td>0.000581</td>\n",
+       "      <td>음식업</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>강남구 개포1동</td>\n",
-       "      <td>20221</td>\n",
-       "      <td>0.036795</td>\n",
-       "      <td>0.155832</td>\n",
-       "      <td>0.052994</td>\n",
-       "      <td>0.000072</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>20223</td>\n",
+       "      <td>0.036547</td>\n",
+       "      <td>0.156631</td>\n",
+       "      <td>0.053661</td>\n",
+       "      <td>0.000169</td>\n",
+       "      <td>소매업</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1323,93 +1334,99 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>498811</th>\n",
+       "      <th>11755</th>\n",
+       "      <td>중랑구 중화2동</td>\n",
+       "      <td>20234</td>\n",
+       "      <td>1.083442</td>\n",
+       "      <td>0.862502</td>\n",
+       "      <td>0.690223</td>\n",
+       "      <td>0.533317</td>\n",
+       "      <td>음식업</td>\n",
+       "      <td>-1.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11756</th>\n",
+       "      <td>중랑구 중화2동</td>\n",
+       "      <td>20241</td>\n",
+       "      <td>1.073258</td>\n",
+       "      <td>0.865938</td>\n",
+       "      <td>0.687714</td>\n",
+       "      <td>0.542402</td>\n",
+       "      <td>소매업</td>\n",
+       "      <td>-3.722222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11757</th>\n",
+       "      <td>중랑구 중화2동</td>\n",
+       "      <td>20241</td>\n",
+       "      <td>1.073258</td>\n",
+       "      <td>0.865938</td>\n",
+       "      <td>0.687714</td>\n",
+       "      <td>0.542402</td>\n",
+       "      <td>음식업</td>\n",
+       "      <td>3.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11758</th>\n",
        "      <td>중랑구 중화2동</td>\n",
        "      <td>20242</td>\n",
        "      <td>1.083672</td>\n",
        "      <td>0.858752</td>\n",
        "      <td>0.682793</td>\n",
        "      <td>0.479870</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>소매업</td>\n",
+       "      <td>-3.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>498812</th>\n",
+       "      <th>11759</th>\n",
        "      <td>중랑구 중화2동</td>\n",
        "      <td>20242</td>\n",
        "      <td>1.083672</td>\n",
        "      <td>0.858752</td>\n",
        "      <td>0.682793</td>\n",
        "      <td>0.479870</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498813</th>\n",
-       "      <td>중랑구 중화2동</td>\n",
-       "      <td>20242</td>\n",
-       "      <td>1.083672</td>\n",
-       "      <td>0.858752</td>\n",
-       "      <td>0.682793</td>\n",
-       "      <td>0.479870</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498814</th>\n",
-       "      <td>중랑구 중화2동</td>\n",
-       "      <td>20242</td>\n",
-       "      <td>1.083672</td>\n",
-       "      <td>0.858752</td>\n",
-       "      <td>0.682793</td>\n",
-       "      <td>0.479870</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498815</th>\n",
-       "      <td>중랑구 중화2동</td>\n",
-       "      <td>20242</td>\n",
-       "      <td>1.083672</td>\n",
-       "      <td>0.858752</td>\n",
-       "      <td>0.682793</td>\n",
-       "      <td>0.479870</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>음식업</td>\n",
+       "      <td>-1.200000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>498816 rows × 7 columns</p>\n",
+       "<p>11760 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            dong  quarter  food_service_lq  retail_service_lq  franchise_lq  \\\n",
-       "0       강남구 개포1동    20221         0.036795           0.155832      0.052994   \n",
-       "1       강남구 개포1동    20221         0.036795           0.155832      0.052994   \n",
-       "2       강남구 개포1동    20221         0.036795           0.155832      0.052994   \n",
-       "3       강남구 개포1동    20221         0.036795           0.155832      0.052994   \n",
-       "4       강남구 개포1동    20221         0.036795           0.155832      0.052994   \n",
-       "...          ...      ...              ...                ...           ...   \n",
-       "498811  중랑구 중화2동    20242         1.083672           0.858752      0.682793   \n",
-       "498812  중랑구 중화2동    20242         1.083672           0.858752      0.682793   \n",
-       "498813  중랑구 중화2동    20242         1.083672           0.858752      0.682793   \n",
-       "498814  중랑구 중화2동    20242         1.083672           0.858752      0.682793   \n",
-       "498815  중랑구 중화2동    20242         1.083672           0.858752      0.682793   \n",
+       "           dong  quarter  food_service_lq  retail_service_lq  franchise_lq  \\\n",
+       "0      강남구 개포1동    20221         0.036795           0.155832      0.052994   \n",
+       "1      강남구 개포1동    20221         0.036795           0.155832      0.052994   \n",
+       "2      강남구 개포1동    20222         0.036278           0.155754      0.053008   \n",
+       "3      강남구 개포1동    20222         0.036278           0.155754      0.053008   \n",
+       "4      강남구 개포1동    20223         0.036547           0.156631      0.053661   \n",
+       "...         ...      ...              ...                ...           ...   \n",
+       "11755  중랑구 중화2동    20234         1.083442           0.862502      0.690223   \n",
+       "11756  중랑구 중화2동    20241         1.073258           0.865938      0.687714   \n",
+       "11757  중랑구 중화2동    20241         1.073258           0.865938      0.687714   \n",
+       "11758  중랑구 중화2동    20242         1.083672           0.858752      0.682793   \n",
+       "11759  중랑구 중화2동    20242         1.083672           0.858752      0.682793   \n",
        "\n",
-       "        youth_sales_lq  순증가율  \n",
-       "0             0.000072   0.0  \n",
-       "1             0.000072   0.0  \n",
-       "2             0.000072   0.0  \n",
-       "3             0.000072   0.0  \n",
-       "4             0.000072   0.0  \n",
-       "...                ...   ...  \n",
-       "498811        0.479870   0.0  \n",
-       "498812        0.479870   6.0  \n",
-       "498813        0.479870   8.0  \n",
-       "498814        0.479870   0.0  \n",
-       "498815        0.479870   0.0  \n",
+       "       youth_sales_lq major      순증가율  \n",
+       "0            0.000072   소매업 -3.846154  \n",
+       "1            0.000072   음식업  0.000000  \n",
+       "2            0.000581   소매업  0.000000  \n",
+       "3            0.000581   음식업  0.000000  \n",
+       "4            0.000169   소매업  0.000000  \n",
+       "...               ...   ...       ...  \n",
+       "11755        0.533317   음식업 -1.700000  \n",
+       "11756        0.542402   소매업 -3.722222  \n",
+       "11757        0.542402   음식업  3.300000  \n",
+       "11758        0.479870   소매업 -3.500000  \n",
+       "11759        0.479870   음식업 -1.200000  \n",
        "\n",
-       "[498816 rows x 7 columns]"
+       "[11760 rows x 8 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,8 +1437,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "01d5dd38-d9b3-437d-8546-6f14d9bde966",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv('final_yes.csv', encoding = 'utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ac0ad37-4c9b-4338-9ada-0b32e43e692e",
    "metadata": {},
    "outputs": [],
    "source": []
